# xlocllm

./: .dockerignore  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/web/: eslint.config.js  index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  catalog.test.ts  catalog.ts  styles.css  types.ts  vite-env.d.ts
apps/web/src/runtime/: BridgeClient.ts  RuntimeHost.ts  VectorStore.test.ts  VectorStore.ts
deploy/docker/: Dockerfile  docker-compose.yml  nginx.conf
python/xlocllm/: LICENSE  PUBLISHING.md  README.md  docs.md  docs_ru.md  models.md  models_ru.md  pyproject.toml  recipes_ru.md
python/xlocllm/src/xlocllm/: __init__.py  _http.py  _mode.py  _native_server.py  _native_window.py  _paths.py  _scopes.py  _server.py  benchmark.py  bridge.py  catalog.py  cli.py  exceptions.py  native_bridge.py  registry.py  runtime.py  types.py  window.py
python/xlocllm/src/xlocllm/data/: __init__.py
python/xlocllm/src/xlocllm/webui/: docs.html  index.html
python/xlocllm/src/xlocllm/webui/assets/: index-5nyCAE-s.js  index-BKhUnk_v.js  index-BMTTKowT.css  index-Bl-Kxnti.js  index-DWPRsn9x.css  index-ovVxofUa.js  ort.bundle.min-BPGvS9my.js  transformers.web-BdW3SXSs.js
python/xlocllm/tests/: test_catalog.py  test_openai_shapes.py  test_rag_units.py
